# cta-stop-watch

./: .gitignore  CITATION.cff  README.md  as.ipynb  citation.cff  gc-vs-code.md  project_history.md  pyproject.toml  repo_files.txt  repo_folders.txt  repo_trees.sh
cta-stop-etl/: create_data_part.py
cta-stop-watch/: aws_test.ipynb
cta-stop-watch/.aws/: credentials
cta-stop-watch/acs/: get_sociodems.R  merge_communities_stops.py
cta-stop-watch/analysis/: agg_metrics.ipynb  calculate_metrics.py  chart_metrics.ipynb  create_analytics_df.py  create_metrics.py  map_bus_stops_metrics.R  metrics.ipynb  metrics.py  num_buses.ipynb  stop_metrics.py  time_to_next_stop.ipynb  trip_metrics.py  utils.py
cta-stop-watch/analysis/data/: chicago_communities.csv  communities_stops.parquet  missing_pids.csv  rt_pid_stop.parquet  rt_to_pid.parquet
cta-stop-watch/archive/analysis_archive/: qc_metrics_calculations.py  stop_metrics.py
cta-stop-watch/archive/cta-stop-etl/: create_data_part.py
cta-stop-watch/archive/scrapers/: download_historic_gtfs.py  move_feeds.py
cta-stop-watch/archive/scratch/: map_external.ipynb
cta-stop-watch/archive/spatial/: sf_community_stops_metrics.parquet  spatial_stops_metrics.R
cta-stop-watch/bus_report_cards/: app.py  index.html
cta-stop-watch/bus_report_cards/static/: main.js  old.js  style.css
cta-stop-watch/cta-stop-etl/: Interpolation.py  add_patterns_from_archive.py  as_qc_script.ipynb  calculate_stop_time.py  create_data_part.py  etl_pipeline.py  explore_qc.ipynb  extract_routes.py  interpolation.py  map_to_stops.py  other_analytics_tables.py  process_patterns.py  process_schedule.py  qc_pipeline.py  scrape_gtfs.py  scrape_patterns.py  skipped_pids.txt
cta-stop-watch/deck_viz/: bus_trips.js  parse_trips_data.py
cta-stop-watch/ghostbus-cta-scrape/: .env  README.md  combine_daily_files.py  scrape_data.py
cta-stop-watch/git-issues-review/: missing_patterns.ipynb  time_between_pings.ipynb
cta-stop-watch/report_automation/: README.md  calculate_stop_time.py  config.json  download.py  interpolation.py  main.py  metrics.sh  metrics_utils.py  process.sh  process_metrics.py  process_patterns.py  process_trips.py  stop_metrics.py  store_data.py  trip_processing.py  update_metrics.py  update_schedule.py  utils.py
cta-stop-watch/scrapers/: download_current_patterns.py  download_historic_gtfs.py  gtfs.ipynb  process_historic_gtfs.py  scrape_patterns.py
cta-stop-watch/scratch/: chart_metrics.ipynb  map_external.ipynb  map_stuff.ipynb  missing_patterns.ipynb  num_buses.ipynb  one_ping_explore.ipynb  pipeline_review.ipynb  time_between_pings.ipynb
cta-stop-watch/spatial/: aggregate_stops_by_community.ipynb
documentation/: stopwatch-architecture.drawio
scripts/: README.md  connect_server.sh  crontab_tasks.txt  daily_combine.sh  metrics.sh  process.sh
(+1716 files in other folders)
