[project]
name = "cta-stop-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "contextily>=1.6.2",
    "datetime>=5.5",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "folium>=0.20.0",
    "gcsfs>=2025.7.0",
    "geopandas>=1.1.1",
    "google-cloud-storage>=3.3.0",
    "gtfs-kit>=10.3.1",
    "jinja2>=3.1.6",
    "logfire[fastapi]>=4.3.5",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.5",
    "memory-profiler>=0.61.0",
    "pathlib>=1.0.1",
    "pendulum>=3.1.0",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "psutil>=7.0.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "uvicorn>=0.35.0",
]
